--- a/app/src/ccceh17/res/values-de/strings.xml
+++ b/app/src/ccceh17/res/values-de/strings.xml
@@ -5,12 +5,10 @@
         <![CDATA[<a href="https://eh17.easterhegg.eu/">https://eh17.easterhegg.eu/</a>]]>
     </string>
     <string name="source_code">
-        <![CDATA[<a href="http://github.com/ligi/CampFahrplan">Quellcode</a>]]>
+        <![CDATA[<a href="https://github.com/MyIgel/EH17Fahrplan">Quellcode</a>]]>
     </string>
     <string name="google_play_store">
-        <![CDATA[<a href="https://play.google.com/store/apps/details?id=org.ligi.fahrplan">Eintrag im Google PlayStore</a>]]>
+        <![CDATA[<a href="https://play.google.com/store/apps/details?id=name.myigel.fahrplan.eh17">Eintrag im Google PlayStore</a>]]>
     </string>
-    <string name="copyright_logo">33C3 artwork von
-        <![CDATA[<a href="http://veith-yaeger.de">Veith Yaeger</a>]]>
-    </string>
+    <string name="copyright_logo"> </string>
 </resources>
